style.css
*{
    padding: 0%;
    margin: 0%;
    box-sizing: border-box;
}
html{
    scroll-behavior: smooth;
}

body::-webkit-scrollbar{
    display: none;
}

/* Navbar */

li{
    list-style: none;
}
a{
    text-decoration: none;
    color: #FFFFFF;
}

.navbar{
    background-color: #6F6AF7;
    width: 100%;
    height: 60px;
    display: flex;
    padding-left: 2rem;
    align-items: center;
    justify-content: space-around;
    position: fixed;
    overflow: hidden;
    top: 0;
}

.links{
    display: flex;
    font-family: 'DM Sans', sans-serif;
    font-size: 19px;
    color: #FFFFFF;
}

.logo{
    font-family: 'Delius Unicase', cursive;
    font-size: 26px;
    font-weight: 600;
}

.lilinks{
    justify-content: space-evenly;
    align-items: center;
    margin-left: 6rem;
}

.downarrow{
    border: 0px;
    margin-left: -14px;
    color: #FFFFFF;
}

#option1{
    display: none;
}

#search{
    border-radius: 15px;
    border: 0px;
    height: 1px;
    width: 250px;
    padding: 15px;
    font-size: 15px;

}

#submit-search{
    background: transparent;
    border: 0px;
    margin-left: -30px;

}

.drop-down{
    width: 10px;
}

/* Body */

.sticky-container{
    position: sticky;
    display: flex;
    height: 250px;
    float: right;
    top: 0;
}

.support-icon{
    height: 100px;
    display: flex;
    position: fixed;
    bottom: 3rem;
    right: 2.5rem;
}

.container1{
    display: flex;
     margin-left: 150px;
     margin-top: 100px;
     margin-right: 150px;
}

.right-con1{
    font-family: 'DM Sans', sans-serif;
    margin-top: 20px;
    border-radius: 15px;
    background-color: #E5D8FF;
    padding: 10px;
    height: 400px;
    box-shadow: 3px 5px 27px 0px rgba(0, 0, 0, 0.25) inset;
    color: #6F7373;
    font-size: 20px;
    padding-top: 25px;
    padding-left: 20px;
}

.container2{
    font-family: 'DM Sans', sans-serif;
    display: flex;
    margin-top: 40px;
    /* left: 10px; */
    margin-left: 10px;
    justify-content: space-evenly;


}
.box1{
    background-color: #929DFF;
    border-radius: 10px;
    /* margin-left: 100px; */
    height: 90px;
    width: 200px;
    color: #FFFFFF;
    align-items: center;
    line-height: 35px;
    padding: 10px;
    font-size: 17px;
    font-weight: 700;
    box-shadow: 0px 9px 31px 0px rgba(0, 0, 0, 0.4);


}
.box2{
    background-color: #734CF2;
    border-radius: 10px;
    height: 90px;
    width: 200px;
    color: #FFFFFF;
    align-items: center;
    line-height: 35px;
    padding: 10px;
    font-size: 17px;
    font-weight: 700;
    box-shadow: 0px 9px 31px 0px #00000066;

}
.box3{
    background-color: #D288FF;
    border-radius: 10px;
    height: 90px;
    width: 200px;
    color: #FFFFFF;
    align-items: center;
    line-height: 35px;
    padding: 10px;
    font-size: 17px;
    font-weight: 700;
    box-shadow: 0px 9px 31px 0px #00000066;
}
.box4{
    background-color: #000000;
    border-radius: 10px;
    height: 90px;
    width: 200px;
    color: #FFFFFF;
    align-items: center;
    line-height: 35px;
    padding: 10px;
    font-size: 17px;
    font-weight: 700;
    box-shadow: 0px 9px 31px 0px #00000066;
}
.container3{

    height: 500px;
    width: 1200px;
    background-color: #483EFF;
    margin-left: 170px;
    margin-right: 150px;
    margin-top: 100px;
    margin-bottom: 100px;
    border-radius: 12px;
    position: relative;
}


.con3-box1{
    font-family: 'DM Sans', sans-serif;
    background-color: #BCE0F6;
    height: 6rem;
    width: 16rem;
    border-radius: 10px;
    display: grid;
    color: #000000;
    text-align: center;
    align-items: center;
    position: absolute;
    margin-left: 150px;
    margin-top: 60px;
    box-shadow: 0px 6px 35px 0px #00000063;
    font-size: 20px;
}

.con3-box2{
    font-family: 'DM Sans', sans-serif;
    height: 6rem;
    width: 16rem;
    border: 4px;
    border-style: solid;
    border-color: #FFFFFF;
    border-radius: 10px;
    display: grid;
    color: #FFFFFF;
    text-align: center;
    align-items: center;
    position: absolute;
    margin-left: 150px;
    margin-top: 200px;
    font-size: 20px;
}

.con3-box3{
    font-family: 'DM Sans', sans-serif;
    height: 6rem;
    width: 16rem;
    border: 4px;
    border-style: solid;
    border-color: #FFFFFF;
    border-radius: 10px;
    display: grid;
    color: #FFFFFF;
    text-align: center;
    align-items: center;
    position: absolute;
    margin-left: 150px;
    margin-top: 340px;
    font-size: 20px;
}

.right-con3{
    background-color: #FFFFFF;
    height: 420px;
    width: 700px;
    position: absolute;
    margin-left: 450px;
    margin-top: 40px;
    border-radius: 12px;
}

#information{
    color: #04285A;
    margin-top: 50px;
    margin-left: 100px;
    font-family: 'Inter', sans-serif;
    font-size: 25px;
    letter-spacing: 0.105em;
    text-align: left;
}

.right-con3-form{
    margin-top: 30px;
}

#con3-label{
    font-family: 'Roboto', sans-serif;
    font-weight: 600;
    color: #04285A;
    letter-spacing: 0.105em;
}

#con3-list{
    font-family: 'Roboto', sans-serif;
    font-weight: 400;
    color: #143565;
    letter-spacing: 0.05em;
    line-height: 3rem;
    margin-left: 100px;
}

